infra/production/k8s/ingress-srv.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-srv
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/from-to-www-redirect: "true"
    service.beta.kubernetes.io/do-loadbalancer-protocol: "https"
    service.beta.kubernetes.io/do-loadbalancer-redirect-http-to-https: "true"
    service.beta.kubernetes.io/do-loadbalancer-hostname: "www.labelled-eg.com"
    cert-manager.io/cluster-issuer: "letsencrypt-production"
    kubernetes.io/ingress.class: "nginx"
spec:
  tls:
    - hosts:
        - www.labelled-eg.com
        - labelled-eg.com
      secretName: echo-tls
  ingressClassName: nginx
  rules:
    - host: www.labelled-eg.com
      http:
        paths:
          - path: /api/auth/?(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: auth-srv
                port:
                  number: 3000
    - host: www.labelled-eg.com
      http:
        paths:
          - path: /api/queries/?(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: queries-srv
                port:
                  number: 3000
    - host: www.labelled-eg.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: web-srv
                port:
                  number: 3000
